# pybeesgrid

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh  setup.py
cmake/: FindNumpy.cmake
python/: CMakeLists.txt  pybeesgrid.cpp  pydeeplocalizer.cpp  setup.py
python/beesgrid/: __init__.py  generate_grids.py  gt_grids.py
python/beesgrid/test/: test_deepdecoder.py
python/deepdecoder/: __init__.py  generate_data.pyx  generate_grids.py  gt_grids.py
python/deepdecoder/test/: test_deepdecoder.py
src/: CMakeLists.txt  CaffeEvaluator.cpp  CaffeEvaluator.h  CaffeGridGenerator.cpp  CaffeGridGenerator.h  GeneratedGrid.cpp  GeneratedGrid.h  Grid.cpp  Grid.h  Grid3D.cpp  Grid3D.h  GridArtist.cpp  GridArtist.h  GridGenerator.cpp  GridGenerator.h  GroundTruthDataLoader.h  beesgrid.cpp  beesgrid.h  caffe.cpp  cv_exercise_data.cpp  deepdecoder.cpp  deepdecoder.h  main.cpp
src/test/: CMakeLists.txt  TestCaffeEvaluator.cpp  TestCaffeGridGenerator.cpp  TestGeneratedGrid.cpp  TestGroundTruthDataLoader.cpp
src/test/testdata/: CMakeLists.txt  Cam_0_20140804152006_3.tdat  test_caffe_evaluator_network.prototxt  test_caffe_trainer_network.prototxt  test_caffe_trainer_solver.prototxt
src/util/: CvHelper.h  Util.h
